<resources>
    <string name="app_name">CalWin</string>
    <string name="round">No</string>
    <string name="delete">Delete</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="round_num">1</string>
    <string name="result1">Team 1: 0</string>
    <string name="result2">Team 2: 0</string>
    <string name="_u">-</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="by_logic_realm">By Logic Realm</string>
</resources>